// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skill component behaviour when click, become proficient in Skill 1`] = `
<div
  id="test"
>
  <input
    aria-checked={false}
    id="testCheckbox"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    type="checkbox"
  />
</div>
`;

exports[`Skill component behaviour when hit enter or space, become proficient in Skill 1`] = `
<div
  id="test"
>
  <input
    aria-checked={false}
    id="testCheckbox"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    type="checkbox"
  />
</div>
`;

exports[`Skill component behaviour when hit unsupported keys, do nothing 1`] = `
<div
  id="test"
>
  <input
    aria-checked={false}
    id="testCheckbox"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    type="checkbox"
  />
</div>
`;

exports[`Skill component rendering renders Skill 1`] = `
<div
  id="test"
>
  <input
    aria-checked={false}
    id="testCheckbox"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    type="checkbox"
  />
</div>
`;

exports[`Skill component rendering renders proficiency Skill 1`] = `
<div
  id="test"
>
  <input
    aria-checked={true}
    id="testCheckbox"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    type="checkbox"
  />
  NaN
</div>
`;
